--- a/source/index.html
+++ b/source/index.html
@@ -1,8 +1,5 @@
 ---
-layout: page
-title: "index"
-date: 2014-10-22 15:59
-comments: true
-sharing: true
-footer: true
+layout: home
+title: "About"
+footer: false
 ---
